Fix deprecation warnings.
Signed-off-by: jedi95 <jedi95@gmail.com>